# Measured-vs-simulated-PV

./: .gitignore  FileToRun.py  LICENSE  PV_DATA_meas_sim.csv  PV_DATA_meas_sim.xlsx  PV_simulation_download.py  README.md  input_datasheet.xlsx  merged_output.csv  pyproject.toml  requirements.txt
Code/: PV_simulation_download.py
Codes to run/: 1-PV_simulation_download.py  2-PV_Graphs.py  3-PV_Graphs_Cloudy_Clear.py
Measured PV data/: Almeria.xlsx  Turin.xlsx  Utrecht.xlsx
Measured PV data/Almeria/: Meas_PV_power.xlsx
Measured PV data/Almeria_Spain/: Meas_PV_power_almeria.xlsx  Meas_power_corrected_norm_2023.xlsx
Measured PV data/Turin_Italy/: General informations.txt
Measured PV data/Utrecht/: Meas_PV_power.xlsx
Publication data/: Profiles_data.xlsx
Python scripts/: 1-PV_simulation_download.py  2-PV_Timeseries_analysis.py  3-H2_Technoeco_assessment.py
Simulated PV data/: PV_DATA_sim.csv  PV_simulation_download.py  TO-RUN-PV_simulation_download.py
Simulated PV data/Input files/: input_datasheet.xlsx
Simulated PV data/Results simulated time series/: PV_DATA_sim.csv
Simulated and measured PV data/: Almeria_meas_sim.csv  Turin_meas_sim.csv  Utrecht_meas_sim.csv
Techno-economic assessment data/: Techno-eco_data_NH3.csv
Time series analysis graphs/: TO_RUN_PV_Graphs.py
Time series analysis graphs/Input files/: Almeria_meas_sim.csv  PV_DATA_meas_sim.csv  Utrecht_meas_sim.csv
data/: Almeria_meas_sim.csv  Turin_meas_sim.csv  Utrecht_meas_sim.csv
data/simulated_PV/PVGIS/: Almeria2023 PG3-ERA5.csv  Almeria2023 PG3-SARAH3.csv  Turin2019 PG2-ERA5.csv  Turin2019 PG2-SARAH2.csv  Turin2019 PG3-ERA5.csv  Turin2019 PG3-SARAH3.csv  Turin2020 PG2-ERA5.csv  Turin2020 PG2-SARAH2.csv  (+2 more)
data/techno-economic_assessment/: Techno-eco_data_NH3.csv
docs/: requirements.txt
docs/source/: conf.py  error_propagation_analysis.md  index.md  installation.md  introduction.md  pv_analysis.md  pv_measured.md  pv_simulation.md
examples/: FileToRun.py  Full_analysis.py
src/: 3-H2_Technoeco_assessment.py
src/H2_techno_eco/: LCOF_diff_all.py  OptiPlant.py
src/measimren/: __init__.py  utils.py
src/plots/: load_data_for_plots.py  plot_all.py  plot_style_config.py  plots.py
src/pv_analysis/: load_data_for_plots.py  metrics.py  plot_all.py  plot_style_config.py  plots.py
src/pv_simulation/: merge_measured_simulated.py  pv_set_up.py  pvgis.py  renewables_ninja.py
src/simeasren/: __init__.py  utils.py
tests/: test_doctests.py
(+75 files in other folders)
