[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simeasren"
version = "0.0.1"
maintainers = [
  { name="Nicolas Campion", email="ncampion@protonmail.com"},
  { name="Giulia Montanari"},
]
authors = [
  { name="Nicolas Campion", email="ncampion@protonmail.com"},
  { name="Giulia Montanari"},
]
description = "A package for comparing measured with simulated renewable power data and study error propagation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

license = "MIT"
license-files = ["./LICENSE*"]

dependencies = [
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "scipy>=1.16.2",
    "scikit-learn>=1.7.2",
    "PuLP>=3.3.0",
    "seaborn>=0.13.2",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]

[project.urls]
Repository = "https://github.com/giumonros/Measured-vs-simulated-PV"
Issues = "https://github.com/giumonros/Measured-vs-simulated-PV/issues"

[tool.setuptools.package-data]
"simeasren" = ["data/measured_PV/*.*",
                "data/techno_economic_assessment/*.*"]